[metadata]
name = rmi-pytorch
version = 0.1.1
description = Region Mutual Information loss in PyTorch
long-description = file: README.rst
author = Robin Elbers
home-page = https://github.com/RElbers/region-mutual-information-pytorch
license = MIT
license-file = LICENSE

[options]
packages = rmi
install_requires =
    torch